@@ -197,6 +197,7 @@ gimp_module_query (GTypeModule *module)
 G_MODULE_EXPORT gboolean
 gimp_module_register (GTypeModule *module)
 {
+  gimp_input_device_store_get_type (module);
   linux_input_get_type (module);
 
   return TRUE;
